--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
     </head>
    
-    <body style="background-color: #111111; color: #fff; ">
+    <body>
         <header>
             <div class="navbar">
                 <a href="#"><img src="img/vallfee-en.png" width="95px"></a>
