--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body style="background-color: #111111; color: #fff; ">
         <header>
             <div class="navbar">
-                <a href="#"><img src="img/vallfee-en.png" width="95px"></a>
+                <a href="#"><img class="lologo"src="img/vallfee-en.png></a>
                 <span id="header">2025, Vallfee</span>
             </div>
            
