--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -15,7 +16,7 @@
     <body style="background-color: #111111; color: #fff; ">
         <header>
             <div class="navbar">
-                <a href="#"><img class="lologo"src="img/vallfee-en.png></a>
+                <a href="#"><img class="lologo"  src="img/vallfee-en.png"></a>
                 <span id="header">2025, Vallfee</span>
             </div>
            
