--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
+
 <!DOCTYPE html>
 <html>
     <head>
         
         <link rel="stylesheet" href="img/styles.css">
         <meta charset="UTF-8">
-        <link rel="icon" href="/img/icon.svg" type="image/svg+xml">1
+        <link rel="icon" href="/img/icon.svg" type="image/svg+xml">
         <title>
             Grounds page
         </title>
