--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <div id="line-raz"></div>
             <div>
-                <a href="#" class="btn-yt">ютуб-канал</a>
+                <a href="https://steamcommunity.com/profiles/76561199783728570/" class="btn-stm">стим-аккаунт</a>
             </div>
             <div>
                 <a href="https://discord.gg/AUBjZzXPQ6" class="btn-ds">дискорд-сервер</a>
